Fix overflow in 1920px or higher res. p6

--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,6 @@ body {
     outline: none;
     width: 21rem;
     height: 20.4rem;
-    overflow: hidden;
     -ms-overflow-style: none; /* ie & edge */
     scrollbar-width: none; /* firefox */
     resize: none;
